@@ -5,7 +5,8 @@ Changelog
 1.11.3 (unreleased)
 -------------------
 
-- Nothing changed yet.
+- Fix tests for new colorbox version.
+  [tschanzt] 
 
 
 1.11.2 (2015-09-10)
